# InterviewReady

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.py  cleanup.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
scripts/: dev.bat
src/: __init__.py  taskbar_manager.py
